# maintainer-compass

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: labels.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ai-maintainer-workflows.md  claude-for-oss-application.md  codex-for-oss-application.md  packaging.md  scoring.md  security-design.md  usage.md
examples/: sample-report.md  sample-report.sarif
src/maintainer_compass/: __init__.py  audit.py  cli.py  github.py  report.py
tests/: test_audit.py  test_cli.py  test_github.py  test_report.py
