[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maintainer-compass"
version = "0.4.0"
description = "A zero-dependency OSS maintenance health checker for maintainers and contributors."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "panda4556" }
]
keywords = [
  "open-source",
  "maintenance",
  "github",
  "cli",
  "automation",
  "repository-health"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/panda4556/maintainer-compass"
Issues = "https://github.com/panda4556/maintainer-compass/issues"
Changelog = "https://github.com/panda4556/maintainer-compass/blob/main/CHANGELOG.md"
Documentation = "https://github.com/panda4556/maintainer-compass#readme"

[project.scripts]
maintainer-compass = "maintainer_compass.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maintainer_compass = ["py.typed"]
